fix: re-work output dom to remove whitespace when copying (#524)

--- a/src/less/components/output.less
+++ b/src/less/components/output.less
@@ -1,4 +1,4 @@
-@import "../variables.less";
+@import '../variables.less';
 
 .output {
   font-size: 12px;
@@ -16,10 +16,7 @@
   overflow-y: scroll;
   -webkit-app-region: no-drag;
 
-  p {
-    margin-bottom: 0;
+  .output-message {
     white-space: pre;
-    padding-left: 5.6em;
-    text-indent: -5.6em;
   }
 }
